[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="NewGame" type="Button" parent="."]
margin_left = 519.0
margin_top = 131.0
margin_right = 671.0
margin_bottom = 190.0
text = "New Game"

[node name="LoadGame" type="Button" parent="."]
margin_left = 526.0
margin_top = 260.0
margin_right = 678.0
margin_bottom = 319.0
text = "Load Game"

[node name="SaveGame" type="Button" parent="."]
margin_left = 527.0
margin_top = 401.0
margin_right = 679.0
margin_bottom = 460.0
text = "Save Game"

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="SaveGame" to="." method="_on_SaveGame_pressed"]
